<resources>
    <string name="app_name">Mirror</string>
    <string name="home">home</string>
    <string name="edit">edit</string>
    <string name="money">money</string>
    <string name="circle">circle</string>
    <string name="full_name">Full Name</string>
    <string name="username">User Name</string>
    <string name="re_password">Re Password</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="full_address">Full Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="sub">*Please select shipping address to review your order.</string>
    <string name="add">add</string>
    <string name="name1">James Logan</string>
    <string name="name2">Steve Rogers</string>
    <string name="phone1">0764565462</string>
    <string name="address1">No 21, old lane, Colombo</string>
    <string name="phone2">0724565469</string>
    <string name="address2">No 21, new lane, Kandy</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="order_details">Order Details</string>
    <string name="payment_summery">Payment Summery</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="product_name">Nike Air Max 270 Mens Casual Shoes</string>
    <string name="product_quantity">1</string>
    <string name="product_price">Rs 2000</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping_fee">Shipping Fee</string>
    <string name="total">Total</string>
    <string name="product_total">Rs 2200</string>
    <string name="fee">Rs 200</string>
    <string name="proceed_to_payment">Proceed To Payment</string>
    <string name="payment">payment</string>
    <string name="text1">Please Select The Preferred payment</string>
    <string name="text2">Method To Use On This Order.</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="card_payment">Card Payment</string>
    <string name="read">I have read and agree to the</string>
    <string name="terms">Terms &amp;</string>
    <string name="conditions">Conditions</string>
    <string name="cont">Continue</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="credit_fee">Credit Card Processing Fees</string>
    <string name="cc_fee">Rs 44</string>
    <string name="tot_amount">Rs 2244</string>
    <string name="bti">Bank Transfer Instructions</string>
    <string name="sbt">Please transfer the total amount to the following bank account.</string>
    <string name="Account_Name">Account Holder Name: MIRROR</string>
    <string name="acc">MIRROR.LK PVT Ltd</string>
    <string name="account_number">Account No: 8000076087</string>
    <string name="bank">BankName: Commercial Bank</string>
    <string name="branch">Branch: Nugegoda</string>
    <string name="bsubt">Our Bank details are follows:</string>
    <string name="Logo">Logo</string>
    <string name="or_log_in_using">Or Log in using</string>
    <string name="not_registerd_yet_sign_in">Not Registerd yet ? Sign In</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Sign Up</string>
    <string name="already_have_an_account_log_in">Already have an account?Log In</string>
    <string name="mirrormirror_lk">MirrorMirror.LK</string>
    <string name="logo">logo</string>
    <string name="person">person</string>
    <string name="menu">menu</string>
    <string name="cartIc">cartic</string>
    <string name="trending">TRENDING</string>
    <string name="women_s_fashion">Women\'s Fashion</string>
    <string name="tren1pic">tren1 pic</string>
    <string name="men_s_fashion">Men\'s Fashion</string>
    <string name="tren3pic">tren3pic</string>
    <string name="shoes">Shoes</string>
    <string name="home_living"><![CDATA[Home & Living]]></string>
    <string name="shoepic">shoepic</string>
    <string name="menpic">menpic</string>
    <string name="tren2pic">tren2pic</string>
    <string name="livepic">livepic</string>
    <string name="womenpic">womenpic</string>
    <string name="back">back</string>
    <string name="profilelogo">profilelogo</string>
    <string name="stevan_smithhead">Stevan Smith</string>
    <string name="stevan_smith">Stevan Smith</string>
    <string name="smith_mail_com">smith@mail.com</string>
    <string name="update">Update</string>
    <string name="paycard_details">Card Details</string>
    <string name="paypay_amount">Pay Amount</string>
    <string name="payname_on_card">Name On Card</string>
    <string name="paycard_number">Card Number</string>
    <string name="paycvv">CVV</string>
    <string name="paymm_yy">MM/YY</string>
    <string name="paywe_accept">We Accept</string>
    <string name="payimg1">payimg1</string>
    <string name="payimg2">payimg2</string>
    <string name="payimg3">payimg3</string>
    <string name="payimage4">payimage4</string>
    <string name="recharge_amount">Recharge Amount</string>
    <string name="your_account_balance_details">Your Account Balance Details</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="enter_email_address_associated_with_your_account_click_the_submit_to_have_your_password_e_mailed_to_you">Enter email address associated with your account. Click the submit to have your password e-mailed to you.</string>
    <string name="submit">Submit</string>
    <string name="move_to_log_in">Move To Log In</string>
    <string name="wish_list">Wish List</string>
    <string name="app_name_title">MirrorMirror.LK</string>
    <string name="feed_back">FeedBack</string>
    <string name="questions">&#032;&#032;Frequently Asked Questions</string>
    <string name="contact_us_title">&#032;&#032;Contact Us For Any Questions</string>
    <string name="submit_feedback">Submit</string>
    <string name="feedback_name">&#032;&#032;Your Name</string>
    <string name="feedback_email">&#032;&#032;Your Email</string>
    <string name="feedback_contactno">&#032;&#032;Your Contact Number</string>
    <string name="feedback_msg">&#032;&#032;Your Message</string>
    <string name="feedback_question1">&#0160;Will you delivery Islandwide?</string>
    <string name="q1_answer">&#0160;Yes, We deliver Island wide with our corporate trusted courier services. So, no worries we always take care of your every order, We pack it safely will arrive to your home safely.</string>
    <string name="feedback_question2">&#0160;Which products can be returned?</string>
    <string name="feedback_question3">&#0160;Do you offer any discounts?</string>


    <string name="my_cart">My Cart</string>

    <string name="ww03_women_bag_1_800rs">ww03 Women Bag 1,800Rs</string>
    <string name="ww04_women_top_1_800rs">ww04 Women Top 1,800Rs</string>
    <string name="ww02_women_top_1_200rs">ww02 Women Top 1,200Rs</string>
    <string name="sort">Sort</string>
    <string name="catergory">Catergory</string>
    <string name="mm001_men_shirt_1_200rs">MM001 Men Shirt 1,200Rs</string>
    <string name="wishlist_cardview_title1">&#032;&#032;WW088-Sports Shoes \n&#032;&#032;Quantity 1</string>
    <string name="wishlist_cardview_price1">&#032;&#032;Rs 1,500.00</string>
    <string name="wishlist_cardview_title2">&#032;&#032;WW065-Women Bag \n&#032;&#032;Quantity 1</string>
    <string name="wishlist_cardview_price12">&#032;&#032;Rs 2,400.00</string>
    <string name="profile_options">Profile Options</string>
    <string name="welcome_text01">We Bring a World of Fashion To Your Fingertips</string>
    <string name="welcome_text02">Sri Lanka\'s Largest Online Fashion &amp; \nLifestyle Store</string>
    <string name="_12">12</string>
    <string name="_03">03</string>
    <string name="loyalty_points_120">Loyalty Points : 120</string>
    <string name="orders">Orders</string>
    <string name="pending">Pending</string>
    <string name="pendingcount">pendingcount</string>
    <string name="totalcount">totalcount</string>
    <string name="wish">wish</string>
    <string name="mm003_men_shirt_1_500">MM003 Men Shirt 1,500</string>
    <string name="mm02_men_shirt_1_500rs">MM02 Men Shirt 1,500rs</string>
    <string name="mm05_men_t_shirt_1_200rs">MM05 Men T-shirt 1,200rs</string>
    <string name="todo">TODO</string>
    <string name="rs_1800_00">Rs 1800.00</string>
    <string name="rs_1200_00">Rs 1200.00</string>
    <string name="continue_checkout">Continue Checkout</string>
    <string name="continue_shopping">Continue Shopping</string>

    <string name="cartimg">cartimg</string>


    <string name="bin">bin</string>

    <string name="cartadd">cartadd</string>

    <string name="cartitem2">cartitem2</string>
    <string name="online_store">Online Store</string>
    <string name="logo3">logo3</string>
</resources>