<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileOptions">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="416dp"
        android:layout_height="290dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="630dp"
        app:cardBackgroundColor="#EA5656"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="72dp"
            android:layout_height="128dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="-15dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/aaa_560x636" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="35dp"
            android:text="@string/mirrormirror_lk"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="58dp"
            android:layout_height="81dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/menu"
            app:srcCompat="@drawable/ic_baseline_menu_24" />

        <ImageView
            android:id="@+id/imageprofile"
            android:layout_width="51dp"
            android:layout_height="68dp"
            android:layout_marginStart="306dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/person"
            app:srcCompat="@drawable/ic_round_person_24" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="44dp"
            android:layout_height="56dp"
            android:layout_marginStart="360dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/cartIc"
            app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="142dp"
            android:layout_height="108dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="120dp"
            android:contentDescription="@string/profilelogo"
            app:srcCompat="@drawable/ic_baseline_account_circle_24" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="49dp"
            android:layout_height="42dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="90dp"
            android:contentDescription="@string/back"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="90dp"
            android:text="@string/stevan_smith"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginTop="200dp"
            android:text="@string/profile_options"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="179dp"
            android:layout_marginTop="35dp"
            app:cardBackgroundColor="#EC4B4B"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="10dp"
                android:text="@string/loyalty_points_120"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="102dp"
                android:layout_height="82dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/totalcount"
                app:srcCompat="@drawable/circle" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="130dp"
                android:text="@string/orders"
                android:textColor="#FFFEFE"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.182"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.977" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginTop="65dp"
                android:text="@string/_12"
                android:textColor="#FFFEFE"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.182"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.977" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="270dp"
                android:layout_marginTop="65dp"
                android:text="@string/_03"
                android:textColor="#FFFEFE"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.182"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.977" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="255dp"
                android:layout_marginTop="130dp"
                android:text="@string/pending"
                android:textColor="#FFFEFE"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.182"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.977" />

            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="102dp"
                android:layout_height="82dp"
                android:layout_marginStart="240dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/pendingcount"
                app:srcCompat="@drawable/circle" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>