<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Store">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="413dp"
        android:layout_height="118dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="630dp"
        app:cardBackgroundColor="#EF5F5F"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="-15dp"
            android:layout_marginEnd="20dp"
            app:srcCompat="@drawable/aaa_560x636"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="35dp"
            android:text="@string/mirrormirror_lk"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="58dp"
            android:layout_height="81dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/ic_baseline_menu_24"
            android:contentDescription="@string/menu" />

        <ImageView
            android:id="@+id/imageprofile"
            android:layout_width="51dp"
            android:layout_height="68dp"
            android:layout_marginStart="306dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/ic_round_person_24"
            android:contentDescription="@string/person" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="44dp"
            android:layout_height="56dp"
            android:layout_marginStart="360dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/ic_baseline_shopping_cart_24"
            android:contentDescription="@string/cartIc" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="126dp"
        android:layout_height="38dp"
        android:text="@string/trending"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="196dp"
        android:layout_height="36dp"
        android:text="@string/women_s_fashion"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="76dp"
        android:layout_height="35dp"
        android:text="@string/shoes"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="165dp"
        android:layout_height="40dp"
        android:text="@string/men_s_fashion"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="165dp"
        android:layout_height="40dp"
        android:text="@string/home_living"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="104dp"
        android:layout_height="121dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354"
        app:srcCompat="@drawable/tren1"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/tren1pic"
        android:focusable="true" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="104dp"
        android:layout_height="121dp"
        android:clickable="true"
        android:contentDescription="@string/tren2pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354"
        app:srcCompat="@drawable/tren2"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
        android:focusable="true" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="104dp"
        android:layout_height="121dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354"
        app:srcCompat="@drawable/tren3"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/tren3pic"
        android:focusable="true" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="157dp"
        android:layout_height="133dp"
        android:clickable="true"
        android:contentDescription="@string/womenpic"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.617"
        app:srcCompat="@drawable/women"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="157dp"
        android:layout_height="133dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.617"
        app:srcCompat="@drawable/men"
        tools:ignore="SpeakableTextPresentCheck"
        android:focusable="true"
        android:contentDescription="@string/menpic" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.924"
        app:srcCompat="@drawable/shoes"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/shoepic"
        android:focusable="true" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="159dp"
        android:layout_height="123dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907"
        app:srcCompat="@drawable/home"
        tools:ignore="SpeakableTextPresentCheck"
        android:focusable="true"
        android:contentDescription="@string/livepic" />

</androidx.constraintlayout.widget.ConstraintLayout>