<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".Welcome">

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="364dp"
        android:layout_height="263dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="32dp"
        android:transitionName="logo_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/aaa_560x636"
        android:contentDescription="@string/logo3" />

    <TextView
        android:id="@+id/logo3"
        android:layout_width="309dp"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="30dp"
        android:text="@string/app_name_title"
        android:textColor="#0D47A1"
        android:textSize="42sp"
        android:textStyle="bold"
        android:transitionName="logo_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="95dp"
        android:fontFamily="monospace"
        android:text="@string/online_store"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />
</androidx.constraintlayout.widget.ConstraintLayout>